--- a/payment.html
+++ b/payment.html
@@ -13,9 +13,9 @@
         
         <div class="relative z-10 text-center px-6 md:px-12">
             <!-- <h1 class="text-5xl md:text-8xl font-bold">404</h1> -->
-            <p class="text-xl md:text-3xl font-semibold mt-2">This Section In Progress.</p>
+            <p class="text-xl md:text-3xl font-semibold mt-2">Payment Successful.</p>
             <p class="text-md md:text-lg mt-2 text-gray-300">
-                Looks like this page is missing. Don't worry though, our best team is on the case.
+                Payment Done
             </p>
 
             <a href="/" class="mt-6 inline-block bg-green-500   hover:bg-[rgb(66,88,188)] text-white px-6 py-3 rounded-lg text-lg font-bold  transition">
